--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vedant Bisht</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhLFkM2xBWeL5VjkobHnTqZnDE8pj1RY5kpw&usqp=CAU" alt="anime picture"
