--- a/contactme.html
+++ b/contactme.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <h1>my contact details</h1>
